Change vservidores rapidos sa to servidoresrapidos.net. Fix conference link not appearing in mobile. Fix some layout issues in mobile view in the footer. Remove flex class. Add hover animation for conference link, Improve conference link.

--- a/src/styles/_layout.sass
+++ b/src/styles/_layout.sass
@@ -43,11 +43,6 @@ p
 .inner-container
   @extend %container
 
-.flex
-  display: flex
-  flex-flow: row wrap
-  justify-content: space-between
-
 .grid
   display: grid
   grid-template-columns: 1fr 1fr
